# mcp-pystub

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json
docs/: article-material.md
src/: __init__.py  analyzer.py  import_extractor.py  import_graph.py  models.py  module_resolver.py  server.py  size_estimator.py  stub_generator.py  usage_analyzer.py
tests/: test_analyzer.py  test_import_extractor.py  test_import_graph.py  test_module_resolver.py  test_server.py  test_size_estimator.py  test_stub_generator.py  test_submodule_stubs.py  test_usage_analyzer.py
tests/fixtures/gui_project/: main.py  pyproject.toml
tests/fixtures/simple_project/: helper.py  main.py  protected_imports.py  pyproject.toml
tests/fixtures/site_packages_mock/heavylib/: __init__.py  core.py  optional_feature.py
tests/fixtures/site_packages_mock/heavylib/gui/: __init__.py  plotter.py
tests/fixtures/site_packages_mock/pandas/: __init__.py
tests/fixtures/site_packages_mock/qtlib/: QtCore.py  __init__.py
